# pyproject-templates

./: README.md  requirements.txt
p420-template/: cookiecutter.json
p420-template/{{cookiecutter.project_name}}-{{cookiecutter.project_sub_name}}/: README.md  pyproject.toml
p420-template/{{cookiecutter.project_name}}-{{cookiecutter.project_sub_name}}/tests/: test_foo.py
p420-template/{{cookiecutter.project_name}}-{{cookiecutter.project_sub_name}}/{{cookiecutter.project_name}}/{{cookiecutter.project_sub_name}}/: __init__.py
plain-template/: cookiecutter.json
plain-template-stubs/: cookiecutter.json
plain-template-stubs/{{cookiecutter.project_full_name}}/: .flake8  Makefile  README.md  pyproject.toml
plain-template/{{cookiecutter.project_name}}/: LICENSE  README.md  pyproject.toml
plain-template/{{cookiecutter.project_name}}/tests/: test_foo.py
