[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_full_name}}"
version = "0.0.1"
authors = [
    { name = "{{cookiecutter.main_author.name}}", email = "{{cookiecutter.main_author.email}}" },
]
description = "{{cookiecutter.project_description}}"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = []

[project.urls]
"Homepage" = "{{cookiecutter.project_homepage}}"
"Bug Tracker" = "{{cookiecutter.project_issue_tracker}}"

[tool.hatch.build]
include = ["{{cookiecutter.project_full_name}}/*.pyi"]
exclude = ["{{cookiecutter.project_full_name}}/__init__.py"]
